--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "tippy.js": "6.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.2.0"
+    "@babel/core": "7.2.0",
+    "typescript": "^4.3.5"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
